# tbscan

./: INSTRUCOES.md  README.md  anticheat.inc  brasilrp.pwn  config.py  jobs_system.inc  phone_system.inc  police_system.inc  requeriments.txt  server.cfg  tbscan.py
MCForceScanner-Pro/: COMANDOS.md  COMO_USAR.md  README.md  RUN.py  START.sh  TESTE_RAPIDO.md  install.sh  pyproject.toml
MCForceScanner-Pro/config/: default.yaml
MCForceScanner-Pro/src/mcforcescanner/: __init__.py
MCForceScanner-Pro/src/mcforcescanner/core/: __init__.py  config.py  exceptions.py
MCForceScanner-Pro/src/mcforcescanner/exploits/: __init__.py  base.py  manager.py
MCForceScanner-Pro/src/mcforcescanner/exploits/information/: __init__.py  version_scan.py
MCForceScanner-Pro/src/mcforcescanner/interface/: __init__.py  cli.py
MCForceScanner-Pro/src/mcforcescanner/network/: __init__.py  scanner.py
MCForceScanner-Pro/src/mcforcescanner/reports/: __init__.py
ai/: chatbot.py
backend/src/config/: app.config.ts
backend/src/modules/users/entities/: user.entity.ts
discord-forms-bot/: .env.example  .gitignore  ATUALIZACAO_SQLITE.md  ATUALIZACOES.md  CORRECOES_APLICADAS.md  MELHORIAS_IMPLEMENTADAS.md  PROJETO_CRIADO.md  README.md  REMOCAO_SQL.md  SISTEMA_CORRIGIDO.md  SISTEMA_SILENCIOSO.md  TRANSFORMACAO_CONCLUIDA.md  deploy-commands.js  index.js  package-lock.json  package.json
discord-forms-bot/commands/: formulario.js  painel-perguntasghost.js  setup-painel.js
discord-forms-bot/config/: constants.js
discord-forms-bot/database/: database.js  forms.json
discord-forms-bot/handlers/: buttonInteractions.js  modalInteractions.js  selectMenuInteractions.js
discord-forms-bot/utils/: cache.js  embeds.js  permissions.js
gamemodes/: brasilrp.pwn
powerclash/: EXECUTIVE_SUMMARY.md  README.md  docker-compose.yml  package.json
powerclash/android-app/app/: build.gradle.kts
powerclash/backend/: package.json
powerclash/backend/src/: server.js
powerclash/backend/src/services/: AIService.js  CheatDetectionService.js
powerclash/docs/: USER_GUIDE.md
powerclash/scripts/: install.sh
powerclash/web-panel/: package.json
powerclash/web-panel/src/components/: Dashboard.tsx
scanner/: os_detector.py  port_scanner.py  service_detector.py  vuln_checker.py
scripts/: vuln.py
sentinelcore/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  install.sh  package.json
sentinelcore/backend/: Dockerfile  package.json
sentinelcore/backend/src/: app.module.ts  main.ts
sentinelcore/backend/src/config/: auth.config.ts  database.config.ts  security.config.ts
sentinelcore/backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  two-factor.service.ts
sentinelcore/backend/src/modules/auth/dto/: login.dto.ts  register.dto.ts  reset-password.dto.ts
sentinelcore/backend/src/modules/auth/guards/: jwt-auth.guard.ts
sentinelcore/backend/src/modules/auth/strategies/: jwt.strategy.ts
sentinelcore/backend/src/modules/files/: files.controller.ts  files.module.ts  files.service.ts
sentinelcore/backend/src/modules/servers/: servers.controller.ts  servers.module.ts  servers.service.ts
sentinelcore/backend/src/modules/servers/dto/: create-server.dto.ts  update-server.dto.ts
sentinelcore/backend/src/modules/websocket/: websocket.gateway.ts  websocket.module.ts
sentinelcore/database/init/: 01-init.sql
sentinelcore/frontend/: Dockerfile  package.json  tailwind.config.js
sentinelcore/frontend/src/: App.tsx
sentinelcore/frontend/src/components/dashboard/: ServerCard.tsx  StatsCard.tsx
sentinelcore/frontend/src/components/ui/: Button.tsx  Input.tsx  LoadingSpinner.tsx
sentinelcore/frontend/src/contexts/: AuthContext.tsx
sentinelcore/frontend/src/pages/auth/: LoginPage.tsx
sentinelcore/frontend/src/pages/dashboard/: DashboardPage.tsx
sentinelcore/monitoring/: prometheus.yml
sentinelcore/nginx/: nginx.conf
utils/: helpers.py  pdf_report.py
(+6 files in other folders)
